add get user by email, refactor openapi.yaml
